# minecrust

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
protocol/: Cargo.toml
protocol/src/: codec.rs  deserializer.rs  error.rs  lib.rs  reader.rs  types.rs
server/: Cargo.toml
server/src/: lib.rs
