[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.8", features = ["codec"] }
thiserror = "1.0.43"
log = "0.4.19"
bytes = "1.4.0"
serde = "1.0.164"
uuid = "1.4.1"
